--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -63,10 +63,11 @@ li a {
 .left-links, .right-links{
   display: flex;
   gap: 10px;
+  padding: 0;
 }
 
 .footer,.header{
-  padding: 5px;
+  padding: 16px;
 }
 
 
