--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -5,6 +5,8 @@ html {
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 300px 900px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -25,7 +27,7 @@ html {
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #005b94;
 }
 
 .nav {
@@ -33,7 +35,7 @@ html {
 }
 
 .article {
-  background-color: #7E1DC3;
+  background-color: #7e1dc3;
 }
 
 .footer {
