--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -7,10 +7,12 @@ html {
 .container {
   display: grid;
   grid-template-columns: 300px 900px;
+  grid-template-rows: 100px 100px 500px 100px;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  gap: 15px;
 }
 
 .container div {
@@ -24,10 +26,12 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / span 2;
 }
 
 .sidebar {
   background-color: #005b94;
+  grid-column: 1;
 }
 
 .nav {
@@ -36,10 +40,12 @@ html {
 
 .article {
   background-color: #7e1dc3;
+  grid-column: 2 / span 1;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / span 2;
 }
 
 .article p {
