--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -26,12 +26,12 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / span 2;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #005b94;
-  grid-column: 1;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -40,12 +40,12 @@ html {
 
 .article {
   background-color: #7e1dc3;
-  grid-column: 2 / span 1;
+  grid-column: 2 / 3;
 }
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / span 2;
+  grid-column: 1 / 3;
 }
 
 .article p {
